=======
CHANGES
=======

---
1.0
---

* On Windows, Setuptools supports deferring to Vinay Sajip's `pylauncher
  <https://bitbucket.org/pypa/pylauncher>`_ (included with Python 3.3) to
  launch console and GUI scripts and not install its own launcher
  executables. This experimental functionality is currently only enabled if
  the ``SETUPTOOLS_USE_PYLAUNCHER`` environment variable is set (to anything).
  In the future, this behavior may become default, but only after it has
  matured and seen substantial adoption.
* Issue #63: Bootstrap script (ez_setup.py) now prefers Powershell, curl, or
  wget for retrieving the Setuptools tarball for improved security of the
  install. The script will still fall back to a simple ``urlopen`` on
  platforms that do not have these tools.
* Issue #65: Deprecated the ``Features`` functionality.
* Issue #52: In ``VerifyingHTTPSConn``, handle a tunnelled (proxied)
  connection.

Backward-Incompatible Changes
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

This release includes a couple of backward-incompatible changes, but most if
not all users will find 1.0 a drop-in replacement for 0.9.

* Issue #50: Normalized API of environment marker support. Specifically,
  removed line number and filename from SyntaxErrors when returned from
  `pkg_resources.invalid_marker`. Any clients depending on the specific
  string representation of exceptions returned by that function may need to
  be updated to account for this change.
* Issue #50: SyntaxErrors generated by `pkg_resources.invalid_marker` are
  normalized for cross-implementation consistency.

-----
0.9.8
-----

* Issue #53: Fix NameErrors in `_vcs_split_rev_from_url`.

-----
0.9.7
-----

* Issue #49: Correct AttributeError on PyPy where a hashlib.HASH object does
  not have a `.name` attribute.
* Issue #34: Documentation now refers to bootstrap script in code repository
  referenced by bookmark.
* Add underscore-separated keys to environment markers (markerlib).

-----
0.9.6
-----
